--- a/.gitignore
+++ b/.gitignore
@@ -270,3 +270,4 @@ Sea/Sea.vcxproj.filters
 /.vscode
 /build-Sea-Desktop_Qt_5_12_0_Clang_64bit-Debug
 /build-Sea-Desktop_Qt_5_12_0_Clang_64bit-Default
+/build-Sea-Desktop_Qt_5_12_0_Clang_64bit-Release
